# ComfyUI-Lattice-Manim

./: CHANGELOG.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  README.md  TESTING.md  UI_TROUBLESHOOTING.md  __init__.py  audio_processor.py  cache_manager.py  caption_generator.py  code_validator.py  comfy.config.json  data_processor.py  data_visualization.py  logger_config.py  manim_code_builder.py  nodes.py  presets.py  prompt_to_code.py  pyproject.toml  requirements.txt  test_components.py  test_e2e.py  test_e2e_simple.py  test_node.py  timeline_scene_manager.py
web/: ManimWidget.vue  index.js  video_preview.js
