[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "comfyui-lattice-manim"
version = "0.1.0"
description = "A ComfyUI extension integrating Manim for animation rendering."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "manim",
    "pydantic",
    "numpy",
    "opencv-python"
]

[tool.comfy]

